# c_proj_lib

./: .gitignore  CMakeLists.txt  MAIN  Makefile  README.md  libvc.h  main.c  test  vc_atoi.c  vc_atoi.h  vc_helper.h  vc_isalnum.h  vc_isalpha.c  vc_isascii.c  vc_isdigit.c  vc_isprint.c  vc_itoa.c  vc_memalloc.c  vc_memccpy.c  vc_memccpy.h  vc_memchr.c  vc_memchr.h  vc_memcmp.c  vc_memcmp.h  vc_memcpy.c  vc_memdel.h  vc_memmove.c  vc_memmove.h  vc_memset.h  vc_putchar.h  vc_putendl.c  vc_putendl.h  vc_putnbr.c  vc_puts.c  vc_strcat.c  vc_strcat.h  vc_strchr.c  vc_strclr.c  vc_strclr.h  vc_strcmp.c  (+35 more)
libvc/: Makefile  libvc.h  test  vc_atoi.h  vc_bzero.c  vc_bzero.h  vc_helper.c  vc_helper.h  vc_isalnum.c  vc_isalnum.h  vc_isalpha.h  vc_isascii.h  vc_isdigit.h  vc_isprint.h  vc_itoa.h  vc_memalloc.h  vc_memccpy.h  vc_memchr.h  vc_memcmp.h  vc_memcpy.h  vc_memdel.c  vc_memdel.h  vc_memmove.h  vc_memset.c  vc_memset.h  vc_putchar.c  vc_putchar.h  vc_putendl.h  vc_putnbr.h  vc_puts.h  vc_strcat.h  vc_strchr.h  vc_strclr.h  vc_strcmp.h  vc_strcpy.h  vc_strdel.h  vc_strdup.h  vc_striter.h  vc_strjoin.h  vc_strlcat.h  (+15 more)
